<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_note_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/item_note_title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:maxLength="30"
            android:singleLine="true"
            android:textAppearance="?attr/textAppearanceHeadline6"
            tools:text="@tools:sample/lorem/random" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/item_note_date_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textAppearance="?attr/textAppearanceSubtitle2"
            android:maxLines="1"
            android:gravity="end"
            android:textStyle="bold"
            tools:text="@tools:sample/lorem/random" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>